--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
     cursor: pointer;
 }
 
-.title-2 {
+.title-up {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
@@ -65,7 +65,7 @@ body {
     color: var(--color-dark);
 }
 
-.title-3 {
+.title-down {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;     
